@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.537 2008/01/17 12:56:13 nm4 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.538 2008/01/18 12:23:26 nm4 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -10,6 +10,11 @@ NM/01 Bugzilla 657: Embedded PCRE removed from the exim source tree.
       When building exim an external PCRE library is now needed -
       PCRE is a system library on the majority of modern systems.
       See entry on PCRE_LIBS in EDITME file.
+
+NM/02 Bugzilla 646: Removed unwanted C/R in Dovecot authenticator
+      conversation.  Added nologin parameter to request.
+      Patch contributed by Kirill Miazine
+
 
 Exim version 4.69
 -----------------
